services - hompage section arrow alignemtn correction

--- a/wp-content/themes/ar-freight/scss/_common.scss
+++ b/wp-content/themes/ar-freight/scss/_common.scss
@@ -92,7 +92,6 @@ body {
     weight: normal;
     size: 25px;
   }
-  text-align: left;
   letter-spacing: 0.5px;
 }
 //Mixin for slick for news-events section and service page//
